# search_and_rescue

./: LICENSE  README.md  main.py  pyproject.toml  search-and-rescue-data.xlsx  test.py
angles/: angles.py  angles2.csv  angles4.csv  angles5.csv  leftnocorner.csv  leftwithcorner.csv  middlenocorner.csv  middlewithcorner.csv  rightnocorner.csv  rightwithcorner.csv
data-processing/: load.py  stat.py  viz.py
datalogs/: 2023-11-15_04-03-35.csv  2023-11-15_04-07-20.csv  2023-11-15_04-10-49.csv  test1.1.csv  test1.2.csv  test1.4.csv  test1.5.csv  test1.6.csv  test2.1.csv  test2.2.csv  test2.3.csv  test2.4.csv  test2.5.csv  test3.1.csv  test3.2.csv  test3.3.csv  test4.1.csv  test4.2.csv  test4.3.csv  test5.1.csv  test5.2.csv  test5.3.csv  test6.1.csv  test6.2.csv  test6.3.csv
examples/: encoders.py  latency.py  light_sensor.py  sensor_cal.py  speed.py  stop.py  test.py  ultrasonic.py
plots/: base_speed.py  ramp.py
src/: .main.py.swp  actuators.py  behavior_tree.py  blackboard.py  logger.py  main.py  p100_aggressive.py  p100_moderate.py  p175_aggressive.py  p175_moderate.py  p250_aggressive.py  p250_moderate.py  params.py  pid_controller.py  robot.py  test_can_detect.py  test_can_detection.py  test_can_pickup.py  test_can_pickup_return.py  test_can_place.py  test_gripper.py  test_line_follow.py  test_line_following.py  test_line_return.py  test_logger.py  test_pickup_flow.py  test_pickup_flow_no_line.py  test_return_to_line.py  test_sensors.py  test_turn.py
tests/: line_following.py  test_can_detection.py  test_can_pickup.py  test_can_place.py  test_return_to_line.py  (+1 more)
(+229 files in other folders)
